stop linebreaks in middle of event names in simulation trace

--- a/modeler/starter/src/css/app.css
+++ b/modeler/starter/src/css/app.css
@@ -223,4 +223,5 @@ input:checked + .slider:before {
 
 #trace {
   overflow-wrap: anywhere;
+  word-break: keep-all;
 }
